--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 the team behind this project is..
 ChriMario Ipeh <chrismariolipehunim@gmail.com>
-RODGER MARAGIA <rodgermaragia@gmail.com>
+RODGER MARAGIA <r28081999m@gmail.com>
